--- a/src/components/Walkman.css
+++ b/src/components/Walkman.css
@@ -4,7 +4,7 @@
   border-radius: 10px;
   border: 2px solid #000;
   position: relative;
-  background-color: #333;
+  background-color: #494949;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,7 +16,7 @@
   height: 182px;
   border-radius: 8px;
   border: 2px solid #000;
-  background-color: #fff;
+  background-color: #030303;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -29,8 +29,8 @@
   width: 111px;
   height: 134px;
   border-radius: 5px;
-  border: 2px solid #000;
-  background-color: #000;
+  border: 2px solid #1d1d1d;
+  background-color: #110025;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -42,7 +42,8 @@
   position: absolute;
   top: 5px;
   font-size: 12px;
-  color: #000;
+  font-weight: bold;
+  color: #fff;
 }
 
 .buttons {
@@ -56,9 +57,9 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #555;
+  background-color: #363636;
   color: #fff;
-  border: 2px solid #000;
+  border: 1px solid #000;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -68,45 +69,55 @@
   top: 40px;
 }
 
-.button-up {
+.button-up,
+.button-down,
+.button-left,
+.button-right,
+.button-back,
+.button-option {
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 16px;
   cursor: pointer;
   position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #363636;
+  border: none;
+}
+
+.button-back,
+.button-option {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  cursor: pointer;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #363636;
+  color: #fff;
+  border: 1px solid #000;
+}
+
+.button-up {
   top: 0px;
 }
 
 .button-down {
-  color: #fff;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-  cursor: pointer;
-  position: absolute;
   bottom: 0px;
 }
 
 .button-left {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-  cursor: pointer;
-  position: absolute;
   top: 50px;
   left: 0px;
 }
 
 .button-right {
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-  cursor: pointer;
-  position: absolute;
   top: 50px;
   right: 0px;
 }
@@ -115,46 +126,30 @@
   width: 130px;
   height: 130px;
   border-radius: 50%;
-  border: 2px solid #000;
-  border-width: 2px;
+  background-color: #363636;
+  border: 1px solid #000;
   top: 10px;
   display: flex;
   justify-content: center;
   position: absolute;
+  z-index: 1;
 }
 
-.button-back {
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  background-color: #555;
-  color: #fff;
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 12px;
-  cursor: pointer;
-  position: absolute;
-  top: 10px;
-  left: -25px;
-}
-
+.button-back,
 .button-option {
   width: 45px;
   height: 45px;
-  border-radius: 50%;
-  background-color: #555;
-  color: #fff;
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 12px;
-  cursor: pointer;
-  position: absolute;
+  font-size: 10px;
   top: 10px;
-  right: -25px;
+  z-index: 2;
+}
+
+.button-back {
+  left: -40px;
+}
+
+.button-option {
+  right: -40px;
 }
 
 .walkman-logo {
@@ -165,22 +160,19 @@
   color: #fff;
 }
 
-.button-home {
+.button-home,
+.button-power {
   position: relative;
+  font-size: 11px;
+  color: #fff;
+}
+
+.button-home {
   top: -10px;
   left: -33px;
-  font-size: 10px;
-  color: #000;
 }
 
 .button-power {
-  position: relative;
   top: -10px;
   right: -33px;
-  font-size: 10px;
-  color: #000;
-}
-
-.button-home, .button-power {
-  font-size: 10px;
 }
