--- a/src/components/Walkman.css
+++ b/src/components/Walkman.css
@@ -1,10 +1,11 @@
 .walkman {
   width: 162px;
   height: 357px;
-  border-radius: 10px;
+  border-radius: 8px;
   border: 2px solid #000;
   position: relative;
   background-color: #494949;
+  background: linear-gradient(15deg, #1a1a1a, #4d4d4d);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,9 +15,10 @@
 .bezel {
   width: 139px;
   height: 182px;
-  border-radius: 8px;
+  border-radius: 12px;
   border: 2px solid #000;
   background-color: #030303;
+  background: linear-gradient(15deg, #0d0d0d, #030303);
   position: relative;
   display: flex;
   flex-direction: column;
@@ -28,7 +30,7 @@
 .screen {
   width: 111px;
   height: 134px;
-  border-radius: 5px;
+  border-radius: 3px;
   border: 2px solid #1d1d1d;
   background-color: #110025;
   display: flex;
@@ -60,6 +62,8 @@
   background-color: #363636;
   color: #fff;
   border: 1px solid #000;
+  background: linear-gradient(15deg, #1a1a1a, #363636);
+  box-shadow: inset 0 0 2px #fff, 0 0 2px #000;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -102,6 +106,8 @@
   background-color: #363636;
   color: #fff;
   border: 1px solid #000;
+  background: linear-gradient(15deg, #1a1a1a, #363636);
+  box-shadow: inset 0 0 2px #fff, 0 0 2px #000;
 }
 
 .button-up {
@@ -128,6 +134,8 @@
   border-radius: 50%;
   background-color: #363636;
   border: 1px solid #000;
+  background: linear-gradient(15deg, #1a1a1a, #363636);
+  box-shadow: inset 0 0 2px #fff, 0 0 2px #000;
   top: 10px;
   display: flex;
   justify-content: center;
@@ -175,4 +183,46 @@
 .button-power {
   top: -10px;
   right: -33px;
+}
+
+.volume-button {
+  position: absolute;
+  width: 20px;
+  height: 5px;
+  background-color: #494949;
+  border: 1px solid #000;
+  background: linear-gradient(15deg, #1a1a1a, #494949);
+}
+
+.volume-button-up::after,
+.volume-button-down::after,
+.key-button::after {
+  content: '';
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  background-color: #d9d9d9;
+  position: absolute;
+}
+
+.volume-button-up::after {
+  top: 1px;
+  left: 8px;
+  background: linear-gradient(30deg, #d9d9d9, #1a1a1a);
+}
+
+.key-button::after {
+  top: 16px;
+  left: 22px;
+  background: linear-gradient(30deg, #d9d9d9, #1a1a1a);
+}
+
+.volume-button-up {
+  top: 155px;
+  right: -23px;
+}
+
+.volume-button-down {
+  top: 180px;
+  right: -23px;
 }
