--- a/src/components/Walkman.css
+++ b/src/components/Walkman.css
@@ -13,10 +13,10 @@
 }
 
 .bezel {
-  width: 139px;
+  width: 145px;
   height: 182px;
   border-radius: 12px;
-  border: 2px solid #000;
+  border: 1px solid #5a5a5a;
   background-color: #030303;
   background: linear-gradient(15deg, #0d0d0d, #030303);
   position: relative;
@@ -28,10 +28,10 @@
 }
 
 .screen {
-  width: 111px;
+  width: 117px;
   height: 134px;
   border-radius: 3px;
-  border: 2px solid #1d1d1d;
+  border: 1px solid #0c0c0c;
   background-color: #110025;
   display: flex;
   align-items: center;
@@ -63,7 +63,7 @@
   color: #fff;
   border: 1px solid #000;
   background: linear-gradient(15deg, #1a1a1a, #363636);
-  box-shadow: inset 0 0 2px #fff, 0 0 2px #000;
+  box-shadow: inset 1px -2px 1px -1px #00000094, inset -2px 3px 2px -3px #ffffffad, 0 0 0 0; /* Updated box shadow */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -106,8 +106,6 @@
   background-color: #363636;
   color: #fff;
   border: 1px solid #000;
-  background: linear-gradient(15deg, #1a1a1a, #363636);
-  box-shadow: inset 0 0 2px #fff, 0 0 2px #000;
 }
 
 .button-up {
@@ -135,7 +133,7 @@
   background-color: #363636;
   border: 1px solid #000;
   background: linear-gradient(15deg, #1a1a1a, #363636);
-  box-shadow: inset 0 0 2px #fff, 0 0 2px #000;
+  box-shadow: inset 1px -2px 1px 0px #00000094, inset -2px 2px 2px -2px #ffffffad, 0 0 0 0; /* Updated box shadow */
   top: 10px;
   display: flex;
   justify-content: center;
@@ -154,10 +152,14 @@
 
 .button-back {
   left: -40px;
+  background: linear-gradient(15deg, #1a1a1a, #363636);
+  box-shadow: inset 1px -2px 1px -1px #00000094, inset -2px 3px 2px -3px #ffffff92, 0 0 0 0; /* Updated box shadow */
 }
 
 .button-option {
   right: -40px;
+  background: linear-gradient(15deg, #1a1a1a, #363636);
+  box-shadow: inset 1px -2px 1px -1px #00000094, inset 0px 1px 2px -1px #ffffffad, 0 0 0 0; /* Updated box shadow */
 }
 
 .walkman-logo {
