--- a/src/components/Walkman.css
+++ b/src/components/Walkman.css
@@ -1,8 +1,9 @@
 .walkman {
+  position: relative; /* Ensure child elements are positioned correctly */
   width: 162px;
   height: 357px;
   border-radius: 8px;
-  border: 2px solid #000;
+  border: 1px solid #000;
   position: relative;
   background-color: #494949;
   background: linear-gradient(15deg, #1a1a1a, #4d4d4d);
@@ -187,44 +188,59 @@
   right: -33px;
 }
 
-.volume-button {
-  position: absolute;
-  width: 20px;
-  height: 5px;
-  background-color: #494949;
-  border: 1px solid #000;
-  background: linear-gradient(15deg, #1a1a1a, #494949);
-}
-
-.volume-button-up::after,
-.volume-button-down::after,
-.key-button::after {
-  content: '';
-  width: 4px;
-  height: 4px;
-  border-radius: 50%;
-  background-color: #d9d9d9;
-  position: absolute;
-}
-
-.volume-button-up::after {
-  top: 1px;
-  left: 8px;
-  background: linear-gradient(30deg, #d9d9d9, #1a1a1a);
-}
-
 .key-button::after {
   top: 16px;
   left: 22px;
   background: linear-gradient(30deg, #d9d9d9, #1a1a1a);
 }
 
-.volume-button-up {
-  top: 155px;
-  right: -23px;
+.volume-buttons {
+  position: absolute;
+  width: 2px;
+  height: 85px;
+  background-color: #494949;
+  border: 1px solid #0e0e0e;
+  background: linear-gradient(15deg, #1a1a1a, #494949);
+  top: 55px;
+  right: -4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.volume-button-down {
-  top: 180px;
-  right: -23px;
+.power-button {
+  position: absolute;
+  width: 2px;
+  height: 10px;
+  background-color: #494949;
+  border: 1px solid #0e0e0e;
+  background: linear-gradient(15deg, #0e0e0e, #1a1a1a);
+  top: 220px;
+  right: -4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* Key button indicator for center button */
+.key-button {
+  position: absolute;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  background: linear-gradient(45deg, #1a1a1a, #494949);  top: 33px; /* Adjust position to be centered below the play-pause icon */
+  left: 23px; /* Adjust position to be centered below the play-pause icon */
+}
+
+.key-volume-button {
+  position: absolute;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  background-color: #494949;
+  background: linear-gradient(60deg, #494949, #1a1a1a);
+  top: 65px;
+  right: -6px;
 }
