--- a/src/components/Walkman.css
+++ b/src/components/Walkman.css
@@ -287,12 +287,31 @@
 }
 
 .header {
-  width: 100%;
+  width: 120px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #120323;
+  position: fixed;
   z-index: 1000;
+}
+
+.screen-content {
+  flex: 1; /* Take up remaining space */
+  overflow-y: auto; /* Scrollable content */
+}
+
+.screen-content::-webkit-scrollbar {
+  width: 3px; /* Chrome, Safari */
+}
+
+.screen-content::-webkit-scrollbar-track {
+  background: #333;
+}
+
+.screen-content::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 4px;
 }
 
 .status-icons {
@@ -319,7 +338,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 5px;
-  padding: 10px 0;
+  padding: 30px 10px 10px 10px;
 }
 
 .icon {
@@ -355,7 +374,6 @@
   padding: 5px 0;
 }
 
-/* Walkman.css */
 .theme-list {
   list-style: none;
   padding: 0;
@@ -407,4 +425,11 @@
   flex-direction: column;
   background-color: #0d0d0d;
   width: 120px;
+}
+
+.audio-player { 
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
 }
