udpate status-icon walkman css

--- a/src/components/Walkman.css
+++ b/src/components/Walkman.css
@@ -357,6 +357,7 @@
 }
 
 .status-icon {
+  position: relative;
   top: -2px;
   display: flex;
   background-color: transparent; /* Placeholder for icons */
