--- a/src/components/Walkman.css
+++ b/src/components/Walkman.css
@@ -306,7 +306,17 @@
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background-color: #494949;
+  background: linear-gradient(60deg, #494949, #1a1a1a);
+  top: 65px;
+  right: -6px;
+}
+
+.key-center-button {
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  border: 1px solid linear-gradient(60deg, #494949, #1a1a1a); 
   background: linear-gradient(60deg, #494949, #1a1a1a);
   top: 65px;
   right: -6px;
