--- a/src/components/Miniplayer.css
+++ b/src/components/Miniplayer.css
@@ -1,12 +1,13 @@
 /* Miniplayer.css */
 .miniplayer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 100px; /* Adjust height as needed */
   background-color: #000;
   z-index: 10;
   cursor: move;
+  display: none; /* Initially hidden */
 }
 
 .miniplayer.active {
@@ -16,8 +17,6 @@
 .miniplayer.minimized {
   width: 100px; /* Adjust width as needed */
   height: 100px; /* Adjust height as needed */
-  right: 0;
-  bottom: 0;
 }
 
 .resize-button {
