--- a/src/components/Miniplayer.css
+++ b/src/components/Miniplayer.css
@@ -1,13 +1,12 @@
 /* Miniplayer.css */
 .miniplayer {
-  position: fixed;
-  bottom: 0;
+  position: absolute;
   width: 100%;
-  height: 100px; /* Adjust height as needed */
+  height: 150px; /* Adjust height as needed */
   background-color: #000;
   z-index: 10;
+  display: none;
   cursor: move;
-  display: none; /* Initially hidden */
 }
 
 .miniplayer.active {
@@ -15,14 +14,26 @@
 }
 
 .miniplayer.minimized {
-  width: 100px; /* Adjust width as needed */
-  height: 100px; /* Adjust height as needed */
+  width: 150px; /* Adjust width as needed */
+  height: 150px; /* Adjust height as needed */
+  bottom: 0;
+  right: 0;
 }
 
 .resize-button {
   position: absolute;
   top: 0;
   right: 0;
+  background: none;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+}
+
+.minimize-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
   background: none;
   border: none;
   color: #fff;
