--- a/src/components/PopupPlayer.css
+++ b/src/components/PopupPlayer.css
@@ -32,3 +32,14 @@
   color: #fff;
   cursor: pointer;
 }
+
+.close-button {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+}
