--- a/src/components/SettingsScreen.css
+++ b/src/components/SettingsScreen.css
@@ -10,8 +10,15 @@
   display: flex;
   flex-direction: column;
   color: #fff;
-  font-size: 12px;
   overflow: hidden;
+}
+
+.screen-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding-top: 16px;
+  position: relative;
 }
 
 .settings-main-screen h2,
